syntax = "proto3";

option go_package = "../pb;pb";
// protoc --proto_path=. --go_out=. ./*.proto
// protoc -I . user.proto  --go_out=plugins=grpc:.

import "common.proto";
import "user.proto";

message CommentAddLikeNumReq{
  int64 comment_id=1;
  int64 num=2;
}

message  CommentAddLikeResp{
  CommonResponse common_rsp = 1;
}

//发布一级评论的请求
message CommentActionTopReq{
  int64 user_id=1;
  int64 video_id=2;
  string comment_text=3;
  int64 action_type=4;
  int64 comment_id=5;
}

//发布二级评论的请求或多级评论
message CommentActionOtherReq{
  int64 user_id=1;
  int64 video_id=2;
  int64 parent_id=3;//父评论的id
  int64 parent_user_id=4;
  string comment_text=5;
  int64 reply_id=6;//回复评论的id
  int64 reply_user_id=7;//回复评论的uid
  int64 action_type=8;
  int64 comment_id=9;
}

message Comment{
  int64 id=1;//视频评论id
  UserInfo user=2; //评论用户信息
  string content=3;//评论内容
  string create_date=4;//评论发布日期
  int64 like=5;//点赞数
}

message CommentActionRsp{
  Comment comment =1;
}

//拉去一级评论时的返回的评论结构
message CommentGet{
  Comment comment =1;
  int64 count=2;//回复数
}

message GetTopCommentListReq{
  int64 video_id=1;
  int64 page=2;
  int64 size=3;
}

message GetTopCommentListRsp{
  repeated CommentGet comments=1;
}

message ReplyComment{
  int64 id=1;//视频评论id
  UserInfo user=2; //评论用户信息
  UserInfo replyUser=3;//回复用户的信息
  string content=4;//评论内容
  string create_date=5;//评论发布日期
  int64 like=6;//点赞数
}

//拉取多级评论
message GetOtherCommentListReq{
  int64 video_id=1;
  int64 parent_id=2;
  int64 page=3;
  int64 size=4;
}

message GetOtherCommentListRsp{
  repeated Comment comment=1;
  repeated ReplyComment replyComment=2;
}

//获取视频评论数
message GetCommentNumReq{
  int64 video_id=1;
}

message GetCommentNumRsp{
  int64 sum=1;
}

service CommentService{
  rpc CommentTopAction(CommentActionTopReq) returns (CommentActionRsp);//发布一级评论
  rpc CommentOtherAction(CommentActionOtherReq) returns (CommentActionRsp);//发布多级评论
  rpc GetTopCommentList(GetTopCommentListReq) returns (GetTopCommentListRsp);//获取一级评论列表
  rpc GetOtherCommentList(GetOtherCommentListReq) returns(GetOtherCommentListRsp);//获取多级评论
  rpc GetCommentSum(GetCommentNumReq) returns(GetCommentNumRsp); //获取评论总数
}



